add changes for Fierys presentation

--- a/sim/experiment/experiment-data.ipynb
+++ b/sim/experiment/experiment-data.ipynb
@@ -165,6 +165,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## ANALYSIS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Summary stats\n",
     "data.groupby(\"did_continue_eval\")[\"highest_value_so_far\"].mean()"
    ]
@@ -326,10 +335,20 @@
     "# longer than the next because those with 6 options evaluated have\n",
     "# one more datapoint than those that only evaluated 5 in total.\n",
     "\n",
+    "max_num_eval = 6\n",
+    "\n",
     "to_plot = data.groupby([\"order\", \"num_eval\"]).agg({\"s2_value\": \"mean\"}).reset_index()\n",
-    "to_plot = to_plot[(to_plot[\"order\"] != np.NaN)]\n",
-    "sns.relplot(data=to_plot, x=\"order\", y=\"s2_value\", kind=\"line\", hue=\"num_eval\", height=8, aspect=11/8)\n",
-    "print(\"Value of options over the course of deliberation, grouped by number of options evaluated\")\n",
+    "to_plot = to_plot[(to_plot[\"order\"] != np.NaN)&(to_plot[\"num_eval\"] <= max_num_eval)]\n",
+    "sns.relplot(data=to_plot[to_plot[\"num_eval\"]!=to_plot[\"order\"]], x=\"order\", y=\"s2_value\", kind=\"line\", hue=\"num_eval\", height=8, aspect=11/8)\n",
+    "\n",
+    "last_line = to_plot[(to_plot[\"num_eval\"]==to_plot[\"order\"])|(to_plot[\"num_eval\"]==to_plot[\"order\"]+1)]\n",
+    "for num_eval in last_line[\"num_eval\"].unique():\n",
+    "    plt.plot(last_line.loc[last_line[\"num_eval\"]==num_eval, \"order\"], last_line.loc[last_line[\"num_eval\"]==num_eval, \"s2_value\"], color=\"red\")\n",
+    "\n",
+    "only_one = to_plot[(to_plot[\"order\"]==1)&(to_plot[\"num_eval\"]==1)]\n",
+    "plt.scatter(only_one[\"num_eval\"], only_one[\"s2_value\"], color=\"red\")\n",
+    "plt.title(\"Value of options over the course of deliberation, grouped by number of options evaluated in total (all subjects)\")\n",
+    "plt.show()\n",
     "\n",
     "# It looks like we do have quite a considerable bump at the end of each line,\n",
     "# which is strong support for the dynamic theory, that the overall downsloping\n",
@@ -350,7 +369,7 @@
     "\n",
     "to_plot = data.groupby([\"order\", \"num_eval\"]).agg({\"rank\": \"mean\"}).reset_index()\n",
     "sns.relplot(data=to_plot, x=\"order\", y=\"rank\", kind=\"line\", hue=\"num_eval\", height=8, aspect=11/8)\n",
-    "print(\"Rank of options over the course of deliberation, grouped by number of options evaluated\")"
+    "print(\"Rank of options over the course of deliberation, grouped by number of options evaluated in total\")"
    ]
   },
   {
@@ -409,6 +428,56 @@
     "plt.ylabel(f\"Absolute difference in {rank_or_s2value}\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How does probability of a month being the last value\n",
+    "# change as a function of the value of that month?\n",
+    "\n",
+    "word_values = data.groupby(\"word\")[\"s2_value\"].mean()\n",
+    "continue_eval_probabilities = data.groupby(\"word\").agg({\"did_continue_eval\": \"mean\"})\n",
+    "to_plot = pd.DataFrame(word_values).join(continue_eval_probabilities)\n",
+    "\n",
+    "to_plot.to_csv(\"~/Desktop/all-subject-prob-continue-value\")\n",
+    "\n",
+    "plt.figure(figsize=(15, 10))\n",
+    "\n",
+    "plt.scatter(to_plot[\"s2_value\"], to_plot[\"did_continue_eval\"])\n",
+    "\n",
+    "m, b = np.polyfit(to_plot[\"s2_value\"], to_plot[\"did_continue_eval\"], 1)\n",
+    "plt.plot(to_plot[\"s2_value\"], m*to_plot[\"s2_value\"] + b, color=\"red\")\n",
+    "\n",
+    "plt.title(\"Probability of continuing to evaluate by option value (non-annual order subjects)\")\n",
+    "plt.xlabel(\"Value of the last word considered\")\n",
+    "plt.ylabel(\"Probability of continuing to evaluate\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
