add intermediate step before excluding subjects, and exclude all subjects as per prereg

--- a/analysis/misspelled.ipynb
+++ b/analysis/misspelled.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../data/thesis_full_clean.csv\")\n",
+    "df = pd.read_csv(\"../data/thesis_full_rearranged.csv\")\n",
     "df"
    ]
   },
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54889996-9216-48ff-b15d-858b884ec3de",
+   "id": "0caa76bd-8fcb-4958-b949-7f9f7264b168",
    "metadata": {},
    "outputs": [],
    "source": []
