consolidate to only have one dynamic agent function

--- a/simulation/thesis_final.ipynb
+++ b/simulation/thesis_final.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "id": "475fad77-e844-4d42-9119-36a07049b65c",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
     "        budget = BASE_BUDGET + action_cost\n",
     "        budget -= k * action_cost # for consideration time\n",
     "        actions_taken = (budget // action_cost)\n",
-    "        return actions_taken * utility\n",
+    "        return actions_taken * utility, (num_eval, utility)\n",
     "    return decide\n",
     "\n",
     "def dynamic_decide(action_cost):\n",
@@ -157,7 +157,7 @@
     "        utility = max(consideration_set)\n",
     "        budget -= num_eval * action_cost # for consideration time\n",
     "        actions_taken = (budget // action_cost)        \n",
-    "        return actions_taken * utility\n",
+    "        return actions_taken * utility, (num_eval, utility)\n",
     "    return decide\n",
     "\n",
     "def optimal_decide(action_cost):\n",
@@ -171,7 +171,7 @@
     "        utility = max(consideration_set)\n",
     "        budget -= num_eval * action_cost # for consideration time\n",
     "        actions_taken = (budget // action_cost)\n",
-    "        return actions_taken * utility\n",
+    "        return actions_taken * utility, (num_eval, utility)\n",
     "    return decide"
    ]
   },
@@ -229,7 +229,8 @@
     "\n",
     "                # evaluate for all agents\n",
     "                for agent_name, agent_func in agents.items():\n",
-    "                    temp_results[agent_name].append(agent_func(vals, cur_r))\n",
+    "                    total_utility, _ = agent_func(vals, cur_r)\n",
+    "                    temp_results[agent_name].append(total_utility)\n",
     "            \n",
     "            rows = [[num_actions, action_cost, cur_r, agent, np.mean(temp_results[agent])] for agent in temp_results.keys()]\n",
     "            results = results.append(pd.DataFrame(rows, columns=results_cols))\n"
@@ -237,12 +238,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 59,
    "id": "8ee06e03-4d18-4222-a46f-e20b23b311a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results.to_csv(\"~/Desktop/thesis/simulation/results.csv\")"
+    "#results.to_csv(\"~/Desktop/thesis/simulation/results.csv\")"
    ]
   },
   {
@@ -404,31 +405,6 @@
     "# Need last column, and value column for dynamic decision maker\n",
     "# Can just re-use code above but keep vals[:,1], the v values\n",
     "\n",
-    "def dynamic_decide(action_cost):\n",
-    "    num_simulations = 100\n",
-    "    def decide(vals, cur_r):\n",
-    "        sigma = [[variance, cur_r * variance], [cur_r * variance, variance]]\n",
-    "        # determine how many you would want to take in similar situations, then go with that\n",
-    "        budget = BASE_BUDGET + action_cost\n",
-    "        num_actions_left = [(budget - i*action_cost) // action_cost for i in range(len(vals))]\n",
-    "        \n",
-    "        # conditional on vhat, the vs are distributed normal with updated mean and variance\n",
-    "        #https://stats.stackexchange.com/questions/30588/deriving-the-conditional-distributions-of-a-multivariate-normal-distribution\n",
-    "        new_mu = MU_V + (VARIANCE * cur_r)/VARIANCE * (vals[:,0]-MU_VHAT)\n",
-    "        new_variance = VARIANCE - (VARIANCE * cur_r)*(VARIANCE * cur_r)/VARIANCE\n",
-    "        \n",
-    "        sim_vals = np.random.multivariate_normal(new_mu, np.diag([new_variance]*len(vals[:,0])), num_simulations)\n",
-    "        max_sim_vals = np.maximum.accumulate(sim_vals, axis=1)\n",
-    "        mean_total_sim_util = np.mean(max_sim_vals * num_actions_left, axis=0) # take cumulative max first, then means\n",
-    "\n",
-    "        num_eval = np.argmax(mean_total_sim_util)+1 # zero-indexed\n",
-    "        consideration_set = vals[:num_eval,1]\n",
-    "        utility = max(consideration_set)\n",
-    "        budget -= num_eval * action_cost # for consideration time\n",
-    "        actions_taken = (budget // action_cost)        \n",
-    "        return actions_taken * utility, (num_eval, utility)\n",
-    "    return decide\n",
-    "\n",
     "num_actions_all = [20, 100, 1000]\n",
     "action_costs_all = [2, 5, 10, 25, 50, 100]\n",
     "\n",
@@ -481,7 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results.to_csv(\"~/Desktop/thesis/simulation/experiment_prediction_results.csv\")"
+    "#results.to_csv(\"~/Desktop/thesis/simulation/experiment_prediction_results.csv\")"
    ]
   },
   {
@@ -702,7 +678,6 @@
     "plt.scatter(to_plot[\"value_bin\"], to_plot[\"last\"])\n",
     "plt.xticks(rotation=45)\n",
     "plt.show()\n",
-    "\n",
     "\n",
     "plt.scatter(to_plot.loc[4:, \"value_bin\"], to_plot.loc[4:, \"last\"])\n",
     "plt.xticks(rotation=45)\n",
